--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -5,5 +5,6 @@
         "debug.console.fontSize": 18,
         "scm.inputFontSize": 18,
         "markdown.preview.fontSize": 18,
-        "terminal.integrated.fontSize": 18
+        "terminal.integrated.fontSize": 18,
+        "liveServer.settings.port": 5501
 }
